# base-python-homeworks

./: .gitignore  README.md  requirements.txt
gbooks/: README.md
gbooks/api/: views.py
gbooks/api/api/: fetch_prepare.py  fetch_session.py  fetch_uri.py
gbooks/api/helpers/: get_book.py
gbooks/api/schemas/: book.py
gbooks/api/tests/: tests_views.py
gbooks/gbooks/: settings.py  urls.py
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
homework_03/app/: main.py
homework_03/app/schemas/: dishes.py  menus.py  submenus.py
homework_03/src/crud/: crud_menus.py
homework_03/src/routes/: __init__.py  api.py
homework_03/src/schemas/: __init__.py  menus.py
homework_03/src/views/: __init__.py  menus.py  ping.py
homework_04/: .env.example  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
homework_05/: app.py  pyproject.toml
homework_05/templates/: base.html
homework_06/: .dockerignore  .env.sample  .gitignore  README.md  README_COMMENTS.md  READ_COMMENTS.md  docker-compose.yaml  requirements.txt
homework_06/app/: config.py  main.py
homework_06/app/app_api/: routes.py
homework_06/app/app_library/: routes.py
homework_06/app/database/: __init__.py
homework_06/app/gbooks/: __init__.py  fetch_books.py  fetch_data_prepare.py  fetch_result.py  fetch_uri.py  get_args_book.py  get_args_library.py  info_delete.py  info_search.py  (+2 more)
homework_07/gbooks/: .gitignore  requirements.txt
(+45 files in other folders)
