[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = "network, db async operations in practice"
authors = ["valed-dm <dmvaled@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "homework_04"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
sqlalchemy = "^1.4"
asyncio = "^3.4.3"
python-dotenv = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
